# APD04-TopK-MinHeap

./: .gitignore  LICENSE  Makefile  README.md  wave.wsf  xrun.tcl
fpga/: apd04_topk_minheap.prj
lib/: CMakeLists.txt
lib/include/: topk_minheap.hpp
lib/src/: libtopk_minheap_dpic.cpp
lib/test/: CMakeLists.txt  utest_topk_minheap.cpp
proj/.dvt/: default.build
proj/src/: apd04_dpsram.sv  apd04_topk_minheap.sv
proj/tb/: apd04_topk_minheap.tb.sv
